src/unified-compiler/grammar/.antlr/UnifiedParser.java
// Generated from /Users/kristofer/LocalProjects/Unified/src/unified-compiler/grammar/UnifiedParser.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class UnifiedParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LBRACE=1, RBRACE=2, LPAREN=3, RPAREN=4, LBRACK=5, RBRACK=6, SEMI=7, COLON=8, 
		COMMA=9, DOT=10, ARROW=11, DOUBLE_COLON=12, PLUS=13, MINUS=14, STAR=15, 
		DIV=16, MOD=17, BIT_AND=18, BIT_OR=19, BIT_XOR=20, BIT_NOT=21, LSHIFT=22, 
		RSHIFT=23, AND=24, OR=25, NOT=26, EQ=27, NE=28, LT=29, GT=30, LE=31, GE=32, 
		ASSIGN=33, PLUS_ASSIGN=34, MINUS_ASSIGN=35, STAR_ASSIGN=36, DIV_ASSIGN=37, 
		MOD_ASSIGN=38, LSHIFT_ASSIGN=39, RSHIFT_ASSIGN=40, AND_ASSIGN=41, XOR_ASSIGN=42, 
		OR_ASSIGN=43, QUESTION=44, QUESTION_QUESTION=45, NULL_COND=46, RANGE=47, 
		RANGE_INCL=48, INC=49, DEC=50, UNDERSCORE=51, MODULE=52, IMPORT=53, AS=54, 
		FN=55, STRUCT=56, ENUM=57, INTERFACE=58, IMPL=59, ACTOR=60, TYPE=61, REFINE=62, 
		CONST=63, LET=64, VAR=65, MUT=66, PUB=67, SELF=68, IF=69, ELSE=70, LOOP=71, 
		WHILE=72, FOR=73, IN=74, BREAK=75, CONTINUE=76, RETURN=77, SWITCH=78, 
		CASE=79, WHERE=80, MOVE=81, AWAIT=82, ASYNC=83, TRY=84, REGION=85, BoolLiteral=86, 
		NullLiteral=87, Identifier=88, IntLiteral=89, FloatLiteral=90, StringLiteral=91, 
		CharLiteral=92, EscapeSequence=93, WS=94, COMMENT=95, MULTILINE_COMMENT=96;
	public static final int
		RULE_program = 0, RULE_item = 1, RULE_moduleDecl = 2, RULE_importDecl = 3, 
		RULE_importPath = 4, RULE_importList = 5, RULE_functionDecl = 6, RULE_paramList = 7, 
		RULE_parameter = 8, RULE_genericParams = 9, RULE_genericParam = 10, RULE_typeConstraint = 11, 
		RULE_whereClause = 12, RULE_whereConstraint = 13, RULE_structDecl = 14, 
		RULE_structMember = 15, RULE_enumDecl = 16, RULE_enumVariant = 17, RULE_enumVariantParams = 18, 
		RULE_enumVariantParam = 19, RULE_interfaceDecl = 20, RULE_interfaceMember = 21, 
		RULE_functionSig = 22, RULE_implDecl = 23, RULE_implMember = 24, RULE_actorDecl = 25, 
		RULE_actorMember = 26, RULE_typeAlias = 27, RULE_constantDecl = 28, RULE_type = 29, 
		RULE_typeList = 30, RULE_statement = 31, RULE_letStatement = 32, RULE_varStatement = 33, 
		RULE_assignmentStatement = 34, RULE_assignmentOp = 35, RULE_regionStatement = 36, 
		RULE_exprStatement = 37, RULE_returnStatement = 38, RULE_ifStatement = 39, 
		RULE_loopStatement = 40, RULE_whileStatement = 41, RULE_forStatement = 42, 
		RULE_switchStatement = 43, RULE_caseClause = 44, RULE_breakStatement = 45, 
		RULE_continueStatement = 46, RULE_blockStatement = 47, RULE_pattern = 48, 
		RULE_patternList = 49, RULE_fieldPattern = 50, RULE_fieldPatternList = 51, 
		RULE_expr = 52, RULE_caseExpr = 53, RULE_primary = 54, RULE_lambdaExpr = 55, 
		RULE_asyncExpr = 56, RULE_structExpr = 57, RULE_fieldInitList = 58, RULE_fieldInit = 59, 
		RULE_listExpr = 60, RULE_mapExpr = 61, RULE_keyValue = 62, RULE_setExpr = 63, 
		RULE_tupleExpr = 64, RULE_namedTupleField = 65, RULE_block = 66, RULE_argList = 67, 
		RULE_literal = 68, RULE_identifier = 69;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "item", "moduleDecl", "importDecl", "importPath", "importList", 
			"functionDecl", "paramList", "parameter", "genericParams", "genericParam", 
			"typeConstraint", "whereClause", "whereConstraint", "structDecl", "structMember", 
			"enumDecl", "enumVariant", "enumVariantParams", "enumVariantParam", "interfaceDecl", 
			"interfaceMember", "functionSig", "implDecl", "implMember", "actorDecl", 
			"actorMember", "typeAlias", "constantDecl", "type", "typeList", "statement", 
			"letStatement", "varStatement", "assignmentStatement", "assignmentOp", 
			"regionStatement", "exprStatement", "returnStatement", "ifStatement", 
			"loopStatement", "whileStatement", "forStatement", "switchStatement", 
			"caseClause", "breakStatement", "continueStatement", "blockStatement", 
			"pattern", "patternList", "fieldPattern", "fieldPatternList", "expr", 
			"caseExpr", "primary", "lambdaExpr", "asyncExpr", "structExpr", "fieldInitList", 
			"fieldInit", "listExpr", "mapExpr", "keyValue", "setExpr", "tupleExpr", 
			"namedTupleField", "block", "argList", "literal", "identifier"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'{'", "'}'", "'('", "')'", "'['", "']'", "';'", "':'", "','", 
			"'.'", "'->'", "'::'", "'+'", "'-'", "'*'", "'/'", "'%'", "'&'", "'|'", 
			"'^'", "'~'", "'<<'", "'>>'", "'&&'", "'||'", "'!'", "'=='", "'!='", 
			"'<'", "'>'", "'<='", "'>='", "'='", "'+='", "'-='", "'*='", "'/='", 
			"'%='", "'<<='", "'>>='", "'&='", "'^='", "'|='", "'?'", "'??'", "'?.'", 
			"'..'", "'..='", "'++'", "'--'", "'_'", null, "'import'", "'as'", "'fn'", 
			"'struct'", "'enum'", "'interface'", "'impl'", "'actor'", "'type'", "'refine'", 
			"'const'", "'let'", "'var'", "'mut'", "'pub'", null, "'if'", "'else'", 
			"'loop'", "'while'", "'for'", "'in'", "'break'", "'continue'", "'return'", 
			"'switch'", "'case'", "'where'", "'move'", "'await'", "'async'", "'try'", 
			"'region'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "LBRACE", "RBRACE", "LPAREN", "RPAREN", "LBRACK", "RBRACK", "SEMI", 
			"COLON", "COMMA", "DOT", "ARROW", "DOUBLE_COLON", "PLUS", "MINUS", "STAR", 
			"DIV", "MOD", "BIT_AND", "BIT_OR", "BIT_XOR", "BIT_NOT", "LSHIFT", "RSHIFT", 
			"AND", "OR", "NOT", "EQ", "NE", "LT", "GT", "LE", "GE", "ASSIGN", "PLUS_ASSIGN", 
			"MINUS_ASSIGN", "STAR_ASSIGN", "DIV_ASSIGN", "MOD_ASSIGN", "LSHIFT_ASSIGN", 
			"RSHIFT_ASSIGN", "AND_ASSIGN", "XOR_ASSIGN", "OR_ASSIGN", "QUESTION", 
			"QUESTION_QUESTION", "NULL_COND", "RANGE", "RANGE_INCL", "INC", "DEC", 
			"UNDERSCORE", "MODULE", "IMPORT", "AS", "FN", "STRUCT", "ENUM", "INTERFACE", 
			"IMPL", "ACTOR", "TYPE", "REFINE", "CONST", "LET", "VAR", "MUT", "PUB", 
			"SELF", "IF", "ELSE", "LOOP", "WHILE", "FOR", "IN", "BREAK", "CONTINUE", 
			"RETURN", "SWITCH", "CASE", "WHERE", "MOVE", "AWAIT", "ASYNC", "TRY", 
			"REGION", "BoolLiteral", "NullLiteral", "Identifier", "IntLiteral", "FloatLiteral", 
			"StringLiteral", "CharLiteral", "EscapeSequence", "WS", "COMMENT", "MULTILINE_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "UnifiedParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public UnifiedParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public List<ItemContext> item() {
			return getRuleContexts(ItemContext.class);
		}
		public ItemContext item(int i) {
			return getRuleContext(ItemContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 52)) & ~0x3f) == 0 && ((1L << (_la - 52)) & 35835L) != 0)) {
				{
				{
				setState(140);
				item();
				}
				}
				setState(145);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ItemContext extends ParserRuleContext {
		public ModuleDeclContext moduleDecl() {
			return getRuleContext(ModuleDeclContext.class,0);
		}
		public FunctionDeclContext functionDecl() {
			return getRuleContext(FunctionDeclContext.class,0);
		}
		public StructDeclContext structDecl() {
			return getRuleContext(StructDeclContext.class,0);
		}
		public EnumDeclContext enumDecl() {
			return getRuleContext(EnumDeclContext.class,0);
		}
		public InterfaceDeclContext interfaceDecl() {
			return getRuleContext(InterfaceDeclContext.class,0);
		}
		public ImplDeclContext implDecl() {
			return getRuleContext(ImplDeclContext.class,0);
		}
		public ActorDeclContext actorDecl() {
			return getRuleContext(ActorDeclContext.class,0);
		}
		public TypeAliasContext typeAlias() {
			return getRuleContext(TypeAliasContext.class,0);
		}
		public ImportDeclContext importDecl() {
			return getRuleContext(ImportDeclContext.class,0);
		}
		public ConstantDeclContext constantDecl() {
			return getRuleContext(ConstantDeclContext.class,0);
		}
		public ItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_item; }
	}

	public final ItemContext item() throws RecognitionException {
		ItemContext _localctx = new ItemContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_item);
		try {
			setState(156);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(146);
				moduleDecl();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(147);
				functionDecl();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(148);
				structDecl();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(149);
				enumDecl();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(150);
				interfaceDecl();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(151);
				implDecl();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(152);
				actorDecl();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(153);
				typeAlias();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(154);
				importDecl();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(155);
				constantDecl();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ModuleDeclContext extends ParserRuleContext {
		public TerminalNode MODULE() { return getToken(UnifiedParser.MODULE, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode LBRACE() { return getToken(UnifiedParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(UnifiedParser.RBRACE, 0); }
		public List<ItemContext> item() {
			return getRuleContexts(ItemContext.class);
		}
		public ItemContext item(int i) {
			return getRuleContext(ItemContext.class,i);
		}
		public ModuleDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_moduleDecl; }
	}

	public final ModuleDeclContext moduleDecl() throws RecognitionException {
		ModuleDeclContext _localctx = new ModuleDeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_moduleDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			match(MODULE);
			setState(159);
			identifier();
			setState(160);
			match(LBRACE);
			setState(164);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 52)) & ~0x3f) == 0 && ((1L << (_la - 52)) & 35835L) != 0)) {
				{
				{
				setState(161);
				item();
				}
				}
				setState(166);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(167);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportDeclContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(UnifiedParser.IMPORT, 0); }
		public ImportPathContext importPath() {
			return getRuleContext(ImportPathContext.class,0);
		}
		public TerminalNode AS() { return getToken(UnifiedParser.AS, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(UnifiedParser.SEMI, 0); }
		public TerminalNode LBRACE() { return getToken(UnifiedParser.LBRACE, 0); }
		public ImportListContext importList() {
			return getRuleContext(ImportListContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(UnifiedParser.RBRACE, 0); }
		public ImportDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importDecl; }
	}

	public final ImportDeclContext importDecl() throws RecognitionException {
		ImportDeclContext _localctx = new ImportDeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_importDecl);
		int _la;
		try {
			setState(186);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(169);
				match(IMPORT);
				setState(170);
				importPath();
				setState(173);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==AS) {
					{
					setState(171);
					match(AS);
					setState(172);
					identifier();
					}
				}

				setState(176);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SEMI) {
					{
					setState(175);
					match(SEMI);
					}
				}

				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(178);
				match(IMPORT);
				setState(179);
				importPath();
				setState(180);
				match(LBRACE);
				setState(181);
				importList();
				setState(182);
				match(RBRACE);
				setState(184);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SEMI) {
					{
					setState(183);
					match(SEMI);
					}
				}

				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportPathContext extends ParserRuleContext {
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public List<TerminalNode> DOT() { return getTokens(UnifiedParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(UnifiedParser.DOT, i);
		}
		public ImportPathContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importPath; }
	}

	public final ImportPathContext importPath() throws RecognitionException {
		ImportPathContext _localctx = new ImportPathContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_importPath);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(188);
			identifier();
			setState(193);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DOT) {
				{
				{
				setState(189);
				match(DOT);
				setState(190);
				identifier();
				}
				}
				setState(195);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportListContext extends ParserRuleContext {
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public List<TerminalNode> AS() { return getTokens(UnifiedParser.AS); }
		public TerminalNode AS(int i) {
			return getToken(UnifiedParser.AS, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(UnifiedParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(UnifiedParser.COMMA, i);
		}
		public TerminalNode STAR() { return getToken(UnifiedParser.STAR, 0); }
		public ImportListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importList; }
	}

	public final ImportListContext importList() throws RecognitionException {
		ImportListContext _localctx = new ImportListContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_importList);
		int _la;
		try {
			setState(213);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Identifier:
				enterOuterAlt(_localctx, 1);
				{
				setState(196);
				identifier();
				setState(199);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==AS) {
					{
					setState(197);
					match(AS);
					setState(198);
					identifier();
					}
				}

				setState(209);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(201);
					match(COMMA);
					setState(202);
					identifier();
					setState(205);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==AS) {
						{
						setState(203);
						match(AS);
						setState(204);
						identifier();
						}
					}

					}
					}
					setState(211);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case STAR:
				enterOuterAlt(_localctx, 2);
				{
				setState(212);
				match(STAR);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionDeclContext extends ParserRuleContext {
		public TerminalNode FN() { return getToken(UnifiedParser.FN, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(UnifiedParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(UnifiedParser.RPAREN, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode PUB() { return getToken(UnifiedParser.PUB, 0); }
		public GenericParamsContext genericParams() {
			return getRuleContext(GenericParamsContext.class,0);
		}
		public ParamListContext paramList() {
			return getRuleContext(ParamListContext.class,0);
		}
		public TerminalNode ARROW() { return getToken(UnifiedParser.ARROW, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public WhereClauseContext whereClause() {
			return getRuleContext(WhereClauseContext.class,0);
		}
		public FunctionDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDecl; }
	}

	public final FunctionDeclContext functionDecl() throws RecognitionException {
		FunctionDeclContext _localctx = new FunctionDeclContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_functionDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(216);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PUB) {
				{
				setState(215);
				match(PUB);
				}
			}
